src/index.css
/* ... */
@media screen and (max-width: 768px) {
  .contact_main_div_left_form_box.modal{
    gap: 10px;
  }
  .modal h2{
    margin-bottom: 10px;
  }
  .done-cards-box {
    overflow-x: scroll;
  }
  .nav-link{
    color: var(--blue);
  }
  .done {
    margin-top: 50px;
  }

  .nav-main {
    position: fixed;
    width: 100%;
    height: 100vh;
    background: var(--white);
    left: 0;
    top: 0;
    flex-direction: column;
    color: var(--black);
    justify-content: center;
    align-items: center;
    padding-top: 110px;
    padding-bottom: 256px;
    transition: .3s;
  }

  .nav-main.active {
    right: 100%;
    left: -100%;
  }

  .bar-close {
    position: absolute;
    top: 20px;
    right: 20px;
    width: 50px;
    height: 50px;
    border-radius: 50%;
    background: var(--blue);
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 30px;
  }
  .bar-close.questions_plus{
    display: flex;
  }

  .nav-lang {
    width: calc(100% - 40px);
    height: 60px;
    margin-right: 0;
    position: relative;
    border-radius: 10px;
  }

  .nav-current-lang {
    height: 60px;
  }

  .bar {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 50px;
    width: 50px;
    border-radius: 50%;
    background: var(--blue);
    color: var(--white);
  }

  .nav-links {
    flex-direction: column;
    width: 100%;
    justify-content: start;
    align-items: flex-start;
    padding: 20px;
    font-size: 18px;
    font-weight: 500;
  }

  .nav-order-btn {
    width: calc(100% - 40px);
    margin-left: 0;
    height: 60px !important;
    display: flex;
    background: var(--blue-bg);
    color: var(--white);
    font-size: 18px;
    font-weight: 700;
    padding: 20px;
  }

  .nav-link:hover {
    color: var(--blue-bg);
  }

  .hero {
    margin-top: 10px;
    flex-direction: column-reverse;
    /* padding: 10px; */
  }

  .hero-infos,
  .hero-slider {
    width: 100%;
  }

  .hero-infos h1 {
    font-size: 30px;
    font-weight: 900;
    margin-bottom: 30px;
  }

  .hero-infos p {
    font-size: 18px;
    margin-bottom: 30px;
  }

  .slide-arrow {
    display: none;
  }

  .hero-slider {
    transform: scale(1);
  }

  .done_bg_title {
    font-size: 50px;
    width: 100%;
    margin-bottom: 20px;
  }
  .done{
    padding: 0;
  }
  .done-bg_div {
    font-size: 15px;
    width: 100%;
  }
  .done-cards{
    padding: 0 10px;
  }
  .done-card{
    padding: 30px;
  }
  .done-bg {
    padding: 300px 0 100px 0;
  }

  .done-title {
    font-size: 22px;
  }

  .done-top img {
    width: 50px;
  }

  .done-card {
    min-width: 400px;
  }

  .done-top {
    margin-bottom: 0px;
  }

  .done-body {
    font-size: 16px;
    line-height: 16px;
  }

  .title {
    font-size: 60px;
    text-align: left;
  }
  .tarif_product{
    padding-top: 10px;
    border-radius: 20px;
  }
  .tarif_product_main {
    flex-direction: column;
  }

  .tarif_product_main_text {
    width: 100%;
    margin-top: 30px;
  }

  .tarif_product_title {
    margin: 0;
  }

  .packaging_main_product {
    max-width: none;
    width: 100%;
  }

  .packaging_main_product img {
    border-radius: 40px;
  }

  .questions_main_div {
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }

  .questions_main_div_img {
    width: 100%;
  }

  .questions_main_div_text {
    width: 100%;
    margin-top: 30px;
  }

  .contact_main_div {
    flex-direction: column-reverse;
    justify-content: center;
    align-items: center;
  }

  .contact_main_div_img {
    width: 90%;
  }

  .contact_main_div_left {
    width: 100%;
  }

  .contact_main_div_left_form form {
    width: 100%;
    gap: 10px;
  }

  .contact_main_div_left_form_div {
    flex-direction: column;
    gap: 10px;
  }

  .contact_main_div_left_form_div input {
    width: 100%;
  }

  .map_main_div {
    flex-direction: column;
  }

  .map_main_div_img {
    width: 100%;
    height: 400px;
  }
  .contact_main_div_img{
    display: none;
  }
  .map_main_div_text {
    width: 100%;
  }

  .footer_main {
    flex-direction: column;
    gap: 30px;
  }

  .tarif_product_title {
    font-style: normal;
    font-weight: 800;
    font-size: 45px;
    line-height: 53px;
  }
  .contact_main_div_left_form_btn{
    padding: 20px ;
    font-size: 16px;
    font-weight: 600;
    letter-spacing: 1px;
    width: 100%;
    margin-top: 5px;
  }
  
}

@media screen and (max-width: 514px) {
  .trade_divs_product {
    min-width: 100%;
    flex-direction: column;
    align-items: center;
    justify-content: center;
  }
  .trade_divs_product_right_body{
    margin-top: 10px;
    line-height: 18px;
  }

  .footer_main_links {
    flex-direction: column;
    gap: 10px;
  }

  .done-card {
    min-width: 320px;
  }
  .done_bg_title {
    width: 100%;
    display: flex;
    flex-wrap: wrap;
    font-size: 30px;
  }

  .title {
    font-size: 60px;
  }

  .contact_main_div_left_form_btn {
    width: 100%;
    height: 50px;
    display: flex;
    align-items: center;
    justify-content: center;
    text-align: center;
  }

  .contact_main_div_left_form_div input {
    width: 100%;
  }
  .contact_main_div_left_form_div input::placeholder {
    font-size: 14px;
  }

  .contact_main_div_left_form_div {
    padding: 0;
  }

  .contact_main_div_left_bottom {
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }

  .packaging_main_product {
    width: 100%;
  }
 

}
/* ... */

